...
                }
                
            }
            .searchable(text: $searchText)
            .navigationTitle(ConstantsMessages.navigationTitle)
            .toolbar {
                Button("Logout") {
                    Constants.kUserDefaults.removeObject(forKey: UserDefaultsConstants.userState)
                    state.user.state = .login
                }
            }
        }
    }
...
